src/App.css
body {
  background-color: #0093c4 !important;
  background-size: 70px;
  background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' x='0' y='0' viewBox='0 0 57.7 57.7' xml:space='preserve'%3E%3Cstyle%3E.st0%7Bfill:%23fff%7D%3C/style%3E%3Cpath fill-opacity='0.3' class='st0' d='M31.8 28.4c-.2 0-.3 0-.5-.1.3.4.4 1 .4 1.5 0 1.6-1.3 2.9-2.9 2.9s-2.9-1.3-2.9-2.9c0-.5.1-1 .4-1.5h-.4c-.9 0-1.7-.8-1.7-1.7 0-.9.8-1.7 1.7-1.7.9 0 1.7.8 1.7 1.7 0 .2 0 .3-.1.5.4-.2.8-.3 1.3-.3s1 .1 1.4.4c-.1-.2-.1-.4-.1-.5 0-.9.8-1.7 1.7-1.7s1.7.8 1.7 1.7c0 .9-.8 1.7-1.7 1.7zM43.2 3.9c1.6 0 2.9-1.3 2.9-2.9 0-.3 0-.7-.2-1h-5.5c-.1.3-.2.7-.2 1 .1 1.6 1.4 2.9 3 2.9zM14.4 3.9c1.6 0 2.9-1.3 2.9-2.9 0-.3 0-.7-.2-1h-5.5c-.1.3-.2.7-.2 1 .1 1.6 1.4 2.9 3 2.9zM46.2 57.3c.9 0 1.7-.8 1.7-1.7 0-.9-.8-1.7-1.7-1.7-.9 0-1.7.8-1.7 1.7 0 .1 0 .3.1.5-.4-.3-.9-.4-1.4-.4s-.9.1-1.3.3c.1-.2.1-.3.1-.5 0-.9-.8-1.7-1.7-1.7-.9 0-1.7.8-1.7 1.7 0 .9.8 1.7 1.7 1.7h.4c-.1.2-.2.3-.2.5H46c-.1-.2-.1-.4-.2-.5.1.1.2.1.4.1zM17.4 57.3c.9 0 1.7-.8 1.7-1.7 0-.9-.8-1.7-1.7-1.7s-1.7.8-1.7 1.7c0 .1 0 .3.1.5-.4-.3-.9-.4-1.4-.4s-.9.1-1.3.3c.1-.2.1-.3.1-.5 0-.9-.8-1.7-1.7-1.7-.9 0-1.7.8-1.7 1.7 0 .9.8 1.7 1.7 1.7h.4c-.1.2-.2.3-.2.5h5.5c-.1-.2-.1-.4-.2-.5.1.1.2.1.4.1zM57.7 26.8c-.5 0-.9.1-1.3.3.1-.2.1-.3.1-.5 0-.9-.8-1.7-1.7-1.7s-1.8.8-1.8 1.7c0 .9.8 1.7 1.7 1.7h.4c-.3.5-.4 1-.4 1.5 0 1.6 1.3 2.9 2.9 2.9l.1-5.9zM2.8 29.8c0-.5-.1-1.1-.4-1.5.2.1.3.1.5.1.9 0 1.7-.8 1.7-1.7S3.8 25 3 25c-.9 0-1.7.8-1.7 1.7 0 .1 0 .3.1.5-.4-.3-.9-.4-1.4-.4v5.9c1.6 0 2.8-1.3 2.8-2.9z'/%3E%3C/svg%3E");
}
.App {
  min-height: 100vh;
}
.App-inner {
  background-color: #f7f7f7;
  border-radius: 2em;
}
.App-title {
  text-align: center;
  margin-top: 0;
  max-width: 540px;
  color: #0093c4;
  line-height: 1.25;
}
@media (max-width: 450px) {
  .App-resultLine {
    width: 100%;
  }
}

.react-tel-input .flag-dropdown {
  top: 19px;
  bottom: auto;
}

